--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-    "name": "com.tylkodemon.enhancedimgui",
-    "displayName": "Enhanced IMGUI",
-    "version": "1.0.0",
-    "unity": "2019.2",
-    "description": "Enhanced IMGUI is a small extension for UnityEngine that improves build-in IMGUI system to look and work more like Dear ImGui",
-    "keywords": ["imgui", "jem"],
-    "category": "Utility",
-    "dependencies": {
-      "com.unity.ugui": "1.0.0"
-    }
+  "name": "com.tylkodemon.enhancedimgui",
+  "version": "1.0.0",
+  "displayName": "Enhanced IMGUI",
+  "description": "Enhanced IMGUI is a small extension for UnityEngine that improves build-in IMGUI system to look and work more like Dear ImGui",
+  "unity": "2019.3",
+  "dependencies": {
+    "com.unity.ugui": "1.0.0"
+  },
+  "keywords": [
+    "ugui",
+    "dear imgui",
+    "imgui"
+  ],
+  "author": {
+    "name": "TylkoDemon",
+    "url": "https://github.com/TylkoDemon"
+  }
 }
